test detect vul func